RESOLVED FIXED Bug 41735
Fix <nobr><nobr> case in HTMLTreeBuilder
https://bugs.webkit.org/show_bug.cgi?id=41735
Summary Fix <nobr><nobr> case in HTMLTreeBuilder
Eric Seidel (no email)
Reported 2010-07-06 21:43:29 PDT
Fix <nobr><nobr> case in HTMLTreeBuilder
Attachments
Patch (4.56 KB, patch)
2010-07-06 21:46 PDT, Eric Seidel (no email)
abarth: review+
Eric Seidel (no email)
Comment 1 2010-07-06 21:46:00 PDT
Adam Barth
Comment 2 2010-07-06 21:47:46 PDT
Comment on attachment 60678 [details] Patch Foiled by your own functions! You should test the reconstruct the formatting elements cases. :)
Eric Seidel (no email)
Comment 3 2010-07-06 22:05:47 PDT
Adam Barth
Comment 4 2010-07-06 22:09:13 PDT
Note You need to log in before you can comment on or make changes to this bug.