2010-07-06  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Fix <nobr><nobr> case in HTMLTreeBuilder
        https://bugs.webkit.org/show_bug.cgi?id=41735

        * html5lib/runner-expected-html5.txt:
2010-07-06  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix <nobr><nobr> case in HTMLTreeBuilder
        https://bugs.webkit.org/show_bug.cgi?id=41735

        We were both not handling <nobr> correctly, as well as
        never hitting the <nobr> case because our formatting
        elements check was overzealous.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTagForInBody):

Canonical link: https://commits.webkit.org/53538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62623 268f45cc-cd09-0410-ab3c-d52691b4dbfc